--- a/pusat/laporan/index.html
+++ b/pusat/laporan/index.html
@@ -14,6 +14,13 @@
             font-family: 'Inter', sans-serif;
         }
 
+        /* Prevent horizontal scroll */
+        html,
+        body {
+            overflow-x: hidden;
+            max-width: 100%;
+        }
+
         /* Animation keyframes - cannot be replaced with Tailwind */
         @keyframes slideInRight {
             from {
@@ -33,29 +40,32 @@
 
     <!-- Navbar -->
     <nav class="fixed top-0 z-50 w-full bg-white border-b">
-        <div class="px-3 py-3 lg:px-5">
-            <div class="flex justify-between">
-                <div class="flex items-center"><button data-drawer-toggle="sidebar"
-                        class="sm:hidden p-2 rounded-lg hover:bg-gray-200"><svg class="w-6 h-6" fill="none"
-                            stroke="currentColor" viewBox="0 0 24 24">
+        <div class="px-3 py-3 lg:px-5 h-16 flex items-center">
+            <div class="flex justify-between items-center w-full">
+                <div class="flex items-center"><button data-drawer-toggle="top-bar-sidebar"
+                        class="sm:hidden p-2 rounded-lg hover:bg-gray-200 transition-colors"><svg class="w-6 h-6"
+                            fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-width="2" d="M5 7h14M5 12h14M5 17h10" />
                         </svg></button><a href="../index.html" class="flex items-center ms-2">
                         <img src="../../assets/logo.png" alt="SIRENATA Logo" class="h-8 w-auto">
                         <span class="text-lg font-semibold ms-2" style="color: #13416B;">SIRENATA</span>
-                    </a></div><button class="flex bg-gray-800 rounded-full" data-dropdown-toggle="dropdown-user"><img
-                        class="w-8 h-8 rounded-full"
-                        src="https://ui-avatars.com/api/?name=Budi+Santoso&background=6366f1&color=fff"
-                        alt="user"></button>
-                <div class="hidden absolute right-0 top-full mt-2 bg-gray-50 border rounded-lg shadow-lg w-44 z-50"
-                    id="dropdown-user">
-                    <div class="px-4 py-3 border-b">
-                        <p class="text-sm font-medium">Budi Santoso</p>
+                    </a></div>
+                <div class="relative"><button class="rounded-full p-0 overflow-hidden"
+                        data-dropdown-toggle="dropdown-user"><img class="w-8 h-8 rounded-full"
+                            src="https://ui-avatars.com/api/?name=Budi+Santoso&background=6366f1&color=fff"
+                            alt="user"></button>
+                    <div class="hidden absolute right-0 top-full mt-2 bg-gray-50 border rounded-lg shadow-lg w-44 z-50"
+                        id="dropdown-user">
+                        <div class="px-4 py-3 border-b">
+                            <p class="text-sm font-medium">Budi Santoso</p>
+                        </div>
+                        <ul class="p-2 text-sm">
+                            <!-- Menu Profile -->
+                            <li><a href="./user/profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a>
+                            </li>
+                            <li><a href="/auth/login.html" class="block p-2 hover:bg-purple-200 rounded">Keluar</a></li>
+                        </ul>
                     </div>
-                    <ul class="p-2 text-sm">
-                        <!-- Menu Profile -->
-                        <li><a href="./user/profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a></li>
-                        <li><a href="/auth/login.html" class="block p-2 hover:bg-purple-200 rounded">Keluar</a></li>
-                    </ul>
                 </div>
             </div>
         </div>
@@ -157,11 +167,11 @@
     </aside>
 
     <!-- Main Content -->
-    <div class="p-4 sm:ml-64 mt-14">
-        <div class="p-6">
+    <div class="sm:ml-64 mt-14">
+        <div class="p-4 md:p-6">
 
             <!-- Breadcrumb -->
-            <nav class="flex mb-6" aria-label="Breadcrumb">
+            <nav class="flex mb-4 md:mb-6 overflow-x-auto" aria-label="Breadcrumb">
                 <ol class="inline-flex items-center space-x-1 md:space-x-3">
                     <li class="inline-flex items-center">
                         <a href="#"
@@ -178,9 +188,9 @@
             </nav>
 
             <!-- Bar Chart: Masa Aktif RTK per Provinsi -->
-            <div class="bg-white rounded-lg p-6 shadow-sm mb-6">
-                <div class="flex items-center justify-between mb-6">
-                    <h2 class="text-xl font-bold text-gray-900">Masa Aktif RTK per Provinsi</h2>
+            <div class="bg-white rounded-lg p-4 md:p-6 shadow-sm mb-4 md:mb-6">
+                <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3 mb-4 md:mb-6">
+                    <h2 class="text-lg md:text-xl font-bold text-gray-900">Masa Aktif RTK per Provinsi</h2>
                     <div class="text-sm text-gray-600">
                         <span class="font-medium">Tahun Sekarang:</span> 2025
                         <span class="mx-2">|</span>
@@ -194,10 +204,11 @@
 
             <!-- RTK Validity Status Pie Chart -->
             <div class="flex justify-center">
-                <div class="bg-white rounded-lg p-6 shadow-sm w-full lg:w-2/3">
-                    <h2 class="text-xl font-bold text-gray-900 mb-4 text-center">Status Masa Berlaku RTK Provinsi (2025)
+                <div class="bg-white rounded-lg p-4 md:p-6 shadow-sm w-full lg:w-2/3">
+                    <h2 class="text-lg md:text-xl font-bold text-gray-900 mb-3 md:mb-4 text-center">Status Masa Berlaku
+                        RTK Provinsi (2025)
                     </h2>
-                    <p class="text-sm text-gray-600 mb-6 text-center">
+                    <p class="text-sm text-gray-600 mb-4 md:mb-6 text-center">
                         RTK yang sudah tidak berlaku <span class="font-semibold text-red-600">harus segera diurus</span>
                     </p>
                     <div class="h-96 flex items-center justify-center">
@@ -207,7 +218,6 @@
             </div>
         </div>
     </div>
-    </div>
 
     <script>
         // Toggle dropdown menu
@@ -216,8 +226,41 @@
         });
 
         // Toggle sidebar on mobile
-        document.querySelector('[data-drawer-toggle="top-bar-sidebar"]')?.addEventListener('click', function () {
-            document.getElementById('top-bar-sidebar').classList.toggle('-translate-x-full');
+        const sidebarToggleBtn = document.querySelector('[data-drawer-toggle="top-bar-sidebar"]');
+        const sidebar = document.getElementById('top-bar-sidebar');
+
+        // Create backdrop element
+        const backdrop = document.createElement('div');
+        backdrop.className = 'fixed inset-0 bg-gray-900 bg-opacity-50 z-30 hidden';
+        backdrop.id = 'sidebar-backdrop';
+        document.body.appendChild(backdrop);
+
+        // Toggle sidebar and backdrop
+        function toggleSidebar() {
+            sidebar.classList.toggle('-translate-x-full');
+            backdrop.classList.toggle('hidden');
+        }
+
+        sidebarToggleBtn?.addEventListener('click', function (e) {
+            e.stopPropagation();
+            toggleSidebar();
+        });
+
+        // Close sidebar when clicking backdrop
+        backdrop.addEventListener('click', function () {
+            toggleSidebar();
+        });
+
+        // Close sidebar when clicking outside on mobile
+        document.addEventListener('click', function (event) {
+            if (window.innerWidth < 640) { // sm breakpoint
+                const isClickInsideSidebar = sidebar.contains(event.target);
+                const isClickOnToggleBtn = sidebarToggleBtn?.contains(event.target);
+
+                if (!isClickInsideSidebar && !isClickOnToggleBtn && !sidebar.classList.contains('-translate-x-full')) {
+                    toggleSidebar();
+                }
+            }
         });
 
         // Close dropdown when clicking outside
