--- a/superadmin/index.html
+++ b/superadmin/index.html
@@ -14,6 +14,13 @@
             font-family: 'Inter', sans-serif;
         }
 
+        /* Prevent horizontal scroll */
+        html,
+        body {
+            overflow-x: hidden;
+            max-width: 100%;
+        }
+
         /* Animasi untuk card */
         .card-hover {
             transition: all 0.3s ease;
@@ -117,8 +124,8 @@
 
     <!-- Navbar -->
     <nav class="fixed top-0 z-50 w-full bg-white border-b">
-        <div class="px-3 py-3 lg:px-5">
-            <div class="flex justify-between">
+        <div class="px-3 py-3 lg:px-5 h-16 flex items-center">
+            <div class="flex justify-between items-center w-full">
                 <div class="flex items-center"><button data-drawer-toggle="sidebar"
                         class="sm:hidden p-2 rounded-lg hover:bg-gray-200"><svg class="w-6 h-6" fill="none"
                             stroke="currentColor" viewBox="0 0 24 24">
@@ -126,23 +133,27 @@
                         </svg></button><a href="../index.html" class="flex items-center ms-2">
                         <img src="../assets/logo.png" alt="SIRENATA Logo" class="h-8 w-auto">
                         <span class="text-lg font-semibold ms-2" style="color: #13416B;">SIRENATA</span>
-                    </a></div><button class="flex bg-gray-800 rounded-full" data-dropdown-toggle="dropdown-user"><img
-                        class="w-8 h-8 rounded-full"
-                        src="https://ui-avatars.com/api/?name=Super+Admin&background=6366f1&color=fff"
-                        alt="user"></button>
-                <div class="hidden absolute right-0 top-full mt-2 bg-gray-50 border rounded-lg shadow-lg w-44 z-50"
-                    id="dropdown-user">
-                    <div class="px-4 py-3 border-b">
-                        <p class="text-sm font-medium">Super Admin</p>
+                    </a></div>
+                <div class="relative"><button class="rounded-full p-0 overflow-hidden"
+                        data-dropdown-toggle="dropdown-user"><img class="w-8 h-8 rounded-full"
+                            src="https://ui-avatars.com/api/?name=Super+Admin&background=6366f1&color=fff"
+                            alt="user"></button>
+                    <div class="hidden absolute right-0 top-full mt-2 bg-gray-50 border rounded-lg shadow-lg w-44 z-50"
+                        id="dropdown-user">
+                        <div class="px-4 py-3 border-b">
+                            <p class="text-sm font-medium">Super Admin</p>
+                        </div>
+                        <ul class="p-2 text-sm">
+                            <!-- Menu Profile -->
+                            <li><a href="../user/profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a>
+                            </li>
+                            <li><a href="../user/settings.html"
+                                    class="block p-2 hover:bg-purple-200 rounded">Pengaturan</a>
+                            </li>
+                            <li><a href="../../auth/login.html" class="block p-2 hover:bg-purple-200 rounded">Keluar</a>
+                            </li>
+                        </ul>
                     </div>
-                    <ul class="p-2 text-sm">
-                        <!-- Menu Profile -->
-                        <li><a href="../user/profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a></li>
-                        <li><a href="../user/settings.html" class="block p-2 hover:bg-purple-200 rounded">Pengaturan</a>
-                        </li>
-                        <li><a href="../../auth/login.html" class="block p-2 hover:bg-purple-200 rounded">Keluar</a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </div>
@@ -202,7 +213,7 @@
     </aside>
 
     <!-- Main Content -->
-    <div class="p-4 sm:ml-64 mt-14">
+    <div class="sm:ml-64 mt-14">
         <div class="p-4 md:p-6">
 
             <!-- Breadcrumb Navigation -->
